--- a/doc/bayes_errors/bayes_errors.tex
+++ b/doc/bayes_errors/bayes_errors.tex
@@ -1,4 +1,4 @@
-% $Id$
+% $Id: bayes_errors.tex 319 2011-10-18 12:21:01Z T.J.Adye $
 \documentclass[12pt,a4paper]{article}
 \usepackage{graphicx}
 \setlength{\textwidth}{190mm}
